--- a/computer/software/tools/programming_languages/general_purpose/python/the_lingo/mini_projects/basic_website_boilerplate/proj/styles/reset.css
+++ b/computer/software/tools/programming_languages/general_purpose/python/the_lingo/mini_projects/basic_website_boilerplate/proj/styles/reset.css
@@ -1,4 +1,5 @@
-:root { font: 20px/1.2 "Roboto", sans-serif; } /* or html */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+:root { font: 20px/1.2 "Poppins", sans-serif; } /* or html */
 
 body,
 body * {
